--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-Django~=2.0.6
+dj-database-url==0.5.0
+Django==2.1.5
+django-crispy-forms==1.7.2
+gunicorn==19.9.0
+pkg-resources==0.0.0
+pytz==2018.9
+whitenoise==4.1.2
+psycopg2==2.7.2
